# pixAV

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  HYBRID_SEARCH.md  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.json
.claude/commands/: lint.md
.claude/rules/common/: coding-style.md  security.md
.claude/rules/python/: coding-style.md  testing.md
.claude/skills/api-design/: SKILL.md
.claude/skills/backend-patterns/: SKILL.md
.claude/skills/code-reviewer/: SKILL.md
.claude/skills/coding-standards/: SKILL.md
.claude/skills/continuous-learning/: SKILL.md
.github/workflows/: ci.yml
docker/: migrate.Dockerfile  pixel-injector.Dockerfile  strm-resolver.Dockerfile
docs/: DEPLOYMENT_PRODUCTION.md  PROJECT_HEALTH_REVIEW_2026-02-16.md  RoadMap.md  TODO_PIPELINE_OPTIMIZATION.md
docs/CODEMAPS/: INDEX.md  data-flow.md  infrastructure.md  pixel-injector.md  shared.md  strm-resolver.md
docs/adr/: 001-rust-python-hybrid.md  template.md
migrations/: 001_create_accounts.sql  001_initial_schema.sql  002_add_account_password.sql  002_create_videos.sql  003_create_tasks.sql  004_create_storage_instances.sql
rust/: Cargo.toml
rust/maxwell-core/: Cargo.toml
rust/maxwell-core/src/: main.rs
rust/media-loader/: Cargo.toml
rust/media-loader/src/: main.rs
rust/sht-probe/: Cargo.toml
rust/sht-probe/src/: main.rs
scripts/: __init__.py  backfill_embeddings.py  bootstrap_qbittorrent_webui.py  check_redis.py  demo_hybrid_search.py  demo_pipeline.py  migrate.py  seed.py  seed_password.py  test_adb_login.py  verify_e2e_full_pipeline.py  verify_e2e_pixel_injector.py  verify_e2e_sht_media.py
src/pixav/: __init__.py  config.py
tests/: conftest.py
tests/e2e/: test_live_crawl_no_mock.py
tests/maxwell_core/: test_backpressure.py  test_dispatcher.py  test_gc.py  test_orchestrator.py  test_scheduler.py  test_worker.py
tests/media_loader/: test_metadata.py  test_qbittorrent.py  test_remuxer.py  test_service.py  test_worker.py
tests/pixel_injector/: test_adb.py  test_redroid.py  test_service.py  test_uploader.py  test_verifier.py  test_worker.py
tests/shared/: test_cookies.py  test_db.py  test_enums.py  test_health.py  test_health_server.py  test_hybrid_search.py  test_interfaces_and_logging.py  test_metrics.py  test_models.py  test_queue.py  test_redis_client.py  test_repository.py
tests/sht_probe/: test_crawl_filtering.py  test_crawler.py  test_flaresolverr_client.py  test_jackett_client.py  test_parser.py  test_scoring.py  test_sehuatang.py  test_service.py  test_worker_config.py
tests/strm_resolver/: test_cache.py  test_middleware.py  test_resolver.py  test_routes.py  test_strm_generator.py
(+64 files in other folders)
