[project]
name = "pixav"
version = "0.1.0"
description = "Maxwell's Demon — distributed media pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "asyncpg>=0.30,<1",
    "redis>=5.2,<6",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "uiautomator2>=3.2,<4",
    "ffmpeg-python>=0.2,<1",
    "httpx>=0.28,<1",
    "structlog>=24.4,<26",
    "docker>=7.1,<8",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.0,<6",
    "aiofiles>=24.1,<25",
    "pgvector>=0.2,<1",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.4.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pytest>=8.2,<9",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.25,<1",
    "testcontainers>=4.9,<5",
    "factory-boy>=3.3,<4",
    "respx>=0.22,<1",
]

# Optional ML dependencies (very large: pulls torch).
embeddings = [
    "sentence-transformers>=2.7,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pixav"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["pixav"]

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "e2e_live: live network/database integration tests (opt-in)",
]

[tool.ruff]
line-length = 120
target-version = "py310"
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "S108"]  # Allow assert, hardcoded strings/passwords/temp paths in tests
"src/pixav/config.py" = ["S105", "S104"]  # Allow hardcoded defaults and 0.0.0.0 binding
"scripts/bootstrap_qbittorrent_webui.py" = ["S603", "S607", "B904"]  # Trusted local ops script uses subprocess.
"scripts/verify_e2e_full_pipeline.py" = ["C901"]  # Manual E2E script, readability > cyclomatic complexity.
"scripts/verify_e2e_pixel_injector.py" = ["C901", "S603", "S607"]  # Manual E2E script uses subprocess.

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "C901"]
ignore = ["E501"]  # Line length handled by black
